apps/filebrowser/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: filebrowser
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels: {}
  strategy:
    type: Recreate
  template:
    metadata:
      labels: {}
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2.11.0-alpine
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            failureThreshold: 30
            timeoutSeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 2
            timeoutSeconds: 3
            periodSeconds: 30
          resources: {}
          volumeMounts:
            - name: data
              mountPath: /data
            - name: db
              mountPath: /db
            - name: config
              mountPath: .filebrowser.json
              subPath: .filebrowser.json
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: filebrowser-data
        - name: db
          persistentVolumeClaim:
            claimName: filebrowser-db
        - name: config
          configMap:
            name: filebrowser-config
            defaultMode: 0644
